--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 Volodymyr Kyrychenko <vladimir.kirichenko@gmail.com> https://github.com/vladimirk
 Igor Petrenko https://github.com/nofateg
-Toğrul Məhərrəmov <cmeisters@gmail.com> https://github.com/macchiatow
+macchiatow <cmeisters@gmail.com> https://github.com/macchiatow
 
